--- a/settings.json.sample
+++ b/settings.json.sample
@@ -1,4 +1,9 @@
 {
+    "addresses": [
+        "0.0.0.0",
+        "::"
+    ]
+    "port": 12200,
     "nodes": [
         {
             "id": "8",
