--- a/settings.json.sample
+++ b/settings.json.sample
@@ -2,12 +2,15 @@
     "addresses": [
         "0.0.0.0",
         "::"
-    ]
+    ],
     "port": 12200,
     "nodes": [
         {
             "id": "8",
-            "path": "/etc/openvpn/openvpn-status.log"
+            "path": "/etc/openvpn/openvpn-status.log",
+            "origins": [
+                "localhost"
+            ]
         }
     ]
 }
