--- a/systemd/openvpn-status-ws.service.sample
+++ b/systemd/openvpn-status-ws.service.sample
@@ -6,7 +6,7 @@ After=network.target remote-fs.target nss-lookup.target
 User={{{USER}}}
 Group={{{GROUP}}}
 Type=simple
-ExecStart={{{PYTHON}}} {{{SCRIPT}}}
+ExecStart={{{PYTHON}}} {{{SCRIPT}}} --log_file_prefix={{{LOG_FILE}}}
 ExecReload=/bin/kill -s HUP $MAINPID
 KillSignal=SIGQUIT
 TimeoutStopSec=5
